[Complete] product Create, Edit

--- a/MiniInventoryManagementSystem.WebApi/MiniInventoryManagementSystem.WebApi.csproj
+++ b/MiniInventoryManagementSystem.WebApi/MiniInventoryManagementSystem.WebApi.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MiniInventoryManagementSystem.Shared\MiniInventoryManagementSystem.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
